Minor Layout Bug Fix

--- a/src/App.css
+++ b/src/App.css
@@ -11,4 +11,5 @@
 
 .viewport {
   padding: 25px;
+  flex: auto;
 }
