--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -41,7 +41,7 @@
   justify-content: center;
   align-items: center;
   background-color: #f5f6fa;
-  width: 100%;
+  /* width: 100%; */
   max-width: 700px;
   border-radius: 25px;
   padding: 10px;
